--- a/src/app/view/home-vw/home-vw.component.html
+++ b/src/app/view/home-vw/home-vw.component.html
@@ -1,6 +1,8 @@
-<section>
+<section class="home-vw">
     <div class="home-logo">
-        <img src="assets/Images/LOGO-02 3.svg" alt="">
+        <figure class="home-logo__figure">
+            <img class="home-vw__logo" src="assets/Images/LOGO-02 3.svg" alt="">
+        </figure>
     </div>
     <div class="home-middle ">
         <a class="btn btn-dark col-md-3"
