--- a/src/app/view/home-vw/home-vw.component.css
+++ b/src/app/view/home-vw/home-vw.component.css
@@ -2,22 +2,39 @@
     width: 100%;
     height: 100%;
 }
-body{
-    background:url(/assets/Images/shutterstock_2189773743\ 1.svg)
+
+.home-vw{
+    height: 100vh;
+    padding:44px 70px;
+    background:url(/assets/Images/shutterstock_2189773743\ 1.png);
+    object-fit: fill;
+    background-position: center bottom;
+    background-size: cover;
 }
 .home-logo{
     padding-bottom: 30px;
     border-bottom:1px solid #1A1A1A;
 }
+.home-logo__figure{
+    width: 236px;
+    height: 36px;
+}
+.home-vw__logo{
+    width: 100%;
+    object-fit: cover;
+}
 .home-middle{
     text-align: center;
-    margin-top: 400px;
+    margin-top: 513px;
+    border-radius: 8px;
+    padding: 18px 60px;
 }
 .btn{
     background-color: #1A1A1A;
     padding: 18px 10px;
 }
 a{
-    font-size: 17px;
+    font-family:"HelveticaNeue", sans-serif;
+    font-size: 22px;
     font-weight: 500;
 }
