--- a/src/app/user/personal-info/personal-info.component.html
+++ b/src/app/user/personal-info/personal-info.component.html
@@ -1,5 +1,5 @@
 <article class="personal-info">
-    <form  (ngSubmit)="onSubmit(form)" #form="ngForm"
+    <form [formGroup]="userRegistration" (ngSubmit)="onFormSubmit()" #form="ngForm"
         class="personal-info__form" >
         <div class="info-type d-flex justify-content-between">
             <h1 class="info-type__title">ᲞᲘᲠᲐᲓᲘ ᲘᲜᲤᲝ</h1>
@@ -10,16 +10,14 @@
             <div class="form-group">
                 <label for="name">სახელი</label>
                 <input
-                ngModel
-                name="name" 
+                formControlName="name"
                 type="text" class="form-control" placeholder="ანზორ">
                 <small>მინიმუმ 2 ასო, ქართული ასოები</small>
             </div>
             <div class="form-group">
                 <label for="surname">გვარი</label>
                 <input
-                ngModel
-                name="surname" 
+                formControlName="surname"
                 type="text" class="form-control" placeholder="მუმლაძე">
                 <small>მინიმუმ 2 ასო, ქართული ასოები</small>
             </div>
@@ -27,8 +25,7 @@
         <div class="form-group">
             <label class="image" for="image">პირადი ფოტოს ატვირთვა</label>
             <input
-            ngModel
-            name="image" 
+            formControlName="image"
             (change)="onUploadImageInputChange($event)"
             #uploadInp type="file" class="d-none">
             <button 
@@ -38,22 +35,20 @@
         <div class="form-group">
             <label for="textArea">ჩემ შესახებ (არასავალდებულო)</label>
             <textarea 
-            name="about"
+            formControlName="about"
             class="form-control" placeholder="ზოგადი ინფო შენ შესახებ"></textarea>
         </div>
         <div class="form-group">
             <label for="email">ელ.ფოსტა</label>
             <input
-            ngModel
-            name="email" 
+            formControlName="email"
             type="email" class="form-control" placeholder="anzorr666@redberry.ge">
             <small>უნდა მთავრდებოდეს @redberry.ge-ით</small>
         </div>
         <div class="form-group">
             <label for="phoneNumber">მობილურის ნომერი</label>
             <input
-            ngModel
-            name="phoneNumber" 
+            formControlName="phoneNumber"
             type="tel" class="form-control" placeholder="+995 551 12 34 56">
             <small>უნდა აკმაყოფილებდეს ქართული მობილურის ნომრის ფორმატს</small>
         </div>
@@ -61,7 +56,6 @@
             <button 
             routerLink="experience"
             routerLinkActive="active"
-            [disabled]="!form.valid"
             class="btn">ᲨᲔᲛᲓᲔᲒᲘ</button>
         </div>
     </form>
