--- a/src/app/user/personal-info/personal-info.component.html
+++ b/src/app/user/personal-info/personal-info.component.html
@@ -54,6 +54,7 @@
         </div>
         <div class="form-group">
             <button 
+            routerLink="/experience"
             routerLinkActive="active"
             class="btn">ᲨᲔᲛᲓᲔᲒᲘ</button>
         </div>
