--- a/src/app/user/experience/experience.component.html
+++ b/src/app/user/experience/experience.component.html
@@ -58,11 +58,10 @@
             >უკან</a>
         </div>
         <div class="form-group">
-            <button 
+            <button (click)="onClickNextPage()"
+            type="button"
             class="btn btn-actions">ᲨᲔᲛᲓᲔᲒᲘ</button>
         </div>
     </div>
     </form>
 </article>
-<!-- *ngFor="let userInfo of getAllUserExperienceInfo().controls; let userInfoIndex=index" -->
- <!-- [formGroupName]="userInfoIndex" -->
