--- a/src/app/user/user-info-area/user-info-area.component.html
+++ b/src/app/user/user-info-area/user-info-area.component.html
@@ -1,4 +1,6 @@
 <article class="user-info__area">
+    <div class="user-information">
+    </div>
     <div class="user-info-image">
         <figure>
             <img src="/assets/Images/LOGO-12 1.svg" alt="">
