--- a/src/app/user/personal-info/personal-info.component.html
+++ b/src/app/user/personal-info/personal-info.component.html
@@ -9,14 +9,16 @@
         <div class="inline-form-groups">
             <div class="form-group">
                 <label for="name">სახელი</label>
-                <input
+                <input 
+                (change)="onInpValueChange()"
                 formControlName="name"
                 type="text" class="form-control" placeholder="ანზორ">
                 <small>მინიმუმ 2 ასო, ქართული ასოები</small>
             </div>
             <div class="form-group">
                 <label for="surname">გვარი</label>
-                <input
+                <input 
+                (change)="onInpValueChange()"
                 formControlName="surname"
                 type="text" class="form-control" placeholder="მუმლაძე">
                 <small>მინიმუმ 2 ასო, ქართული ასოები</small>
@@ -24,14 +26,17 @@
         </div>
         <div class="form-group">
             <label class="image" for="image">პირადი ფოტოს ატვირთვა</label>
-            <input
+            <input 
+            (change)="onInpValueChange()"
             formControlName="image"
-            (change)="onUploadImageInputChange($event)"
+            (change)="onUploadImageInputChange($event)" 
             #uploadInp type="file" class="d-none">
             <button 
+            type="button"
             (click)="onImageUpload(uploadInp)"
             class="upload-image">ატვირთვა</button>
         </div>
+        <img *ngIf="personalInfoRegistration.value.image" [src]="personalInfoRegistration.value.image">
         <div class="form-group">
             <label for="textArea">ჩემ შესახებ (არასავალდებულო)</label>
             <textarea 
@@ -40,14 +45,16 @@
         </div>
         <div class="form-group">
             <label for="email">ელ.ფოსტა</label>
-            <input
+            <input 
+            (change)="onInpValueChange()"
             formControlName="email"
             type="email" class="form-control" placeholder="anzorr666@redberry.ge">
             <small>უნდა მთავრდებოდეს @redberry.ge-ით</small>
         </div>
         <div class="form-group">
             <label for="phoneNumber">მობილურის ნომერი</label>
-            <input
+            <input 
+            (change)="onInpValueChange()"
             formControlName="phoneNumber"
             type="tel" class="form-control" placeholder="+995 551 12 34 56">
             <small>უნდა აკმაყოფილებდეს ქართული მობილურის ნომრის ფორმატს</small>
@@ -66,3 +73,6 @@
         </div>
     </form>
 </article>
+
+<!-- (change)="onUploadImageInputChange($event)" Input-->
+<!-- (click)="onImageUpload(uploadInp)" Button-->
