--- a/src/app/user/user-info-area/user-info-area.component.html
+++ b/src/app/user/user-info-area/user-info-area.component.html
@@ -1,6 +1,7 @@
 <article class="user-info__area">
     <div class="user-information">
     </div>
+    <p>{{cardItem.name}}</p>
     <div class="user-info-image">
         <figure>
             <img src="/assets/Images/LOGO-12 1.svg" alt="">
