--- a/src/app/user/education/education.component.html
+++ b/src/app/user/education/education.component.html
@@ -23,6 +23,7 @@
                             formControlName="degreeId"
                             class="form-group form-control form-select" aria-label="Default select example" name="dropdow" id="dropdown" >
                                 <option selected>აირჩიეთ ხარისხი</option>
+                                <option *ngFor="let item of dropDownItems" >{{item.title}}</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -54,6 +55,7 @@
             </div>
             <div class="form-group">
                 <button 
+                type="button"
                 (click)="onClickNextPage()"
                 class="btn btn-actions">ᲓᲐᲡᲠᲣᲚᲔᲑᲐ</button>
             </div>
