--- a/src/app/user/user-info-area/user-info-area.component.html
+++ b/src/app/user/user-info-area/user-info-area.component.html
@@ -1,5 +1,5 @@
 <article class="user-info__area">
-    <div class="user-information">
+    <!-- <div class="user-information">
         <div class="user-info__top">
             <div class="user-info__left">
                 <div class="inline-form-groups">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <p></p>
-    </div>
+    </div> -->
     
     <div class="user-info-image">
         <figure>
