--- a/src/app/user/education/education.component.html
+++ b/src/app/user/education/education.component.html
@@ -55,6 +55,7 @@
             </div>
             <div class="form-group">
                 <button 
+                [disabled]="!form.valid"
                 type="button"
                 (click)="onClickNextPage()"
                 class="btn btn-actions">ᲓᲐᲡᲠᲣᲚᲔᲑᲐ</button>
