--- a/src/app/user/experience/experience.component.html
+++ b/src/app/user/experience/experience.component.html
@@ -59,6 +59,7 @@
         </div>
         <div class="form-group">
             <button (click)="onClickNextPage()"
+            [disabled]="!form.valid"
             type="button"
             class="btn btn-actions">ᲨᲔᲛᲓᲔᲒᲘ</button>
         </div>
