--- a/src/app/user/personal-info/personal-info.component.html
+++ b/src/app/user/personal-info/personal-info.component.html
@@ -63,6 +63,7 @@
             </div>
             <div class="form-group">
                 <button 
+                [disabled]="!form.valid"
                 class="btn">ᲨᲔᲛᲓᲔᲒᲘ</button>
             </div>
         </div>
