--- a/src/app/user/experience/experience.component.css
+++ b/src/app/user/experience/experience.component.css
@@ -75,3 +75,16 @@ textarea{
 .btn-actions{
     background: #6B40E3;
 }
+input.ng-invalid.ng-touched{
+    border:1px solid red;
+}
+input.ng-valid.ng-touched{
+    border:1px solid #98E37E;
+    -webkit-appearance: none;
+
+    background-image: url("/assets/Images/success.svg");
+    background-repeat: no-repeat;
+    background-position-x: 98%;
+    background-position-y: 20px;
+
+}
