--- a/src/app/user/personal-info/personal-info.component.css
+++ b/src/app/user/personal-info/personal-info.component.css
@@ -76,3 +76,16 @@ input,textarea{
     flex-direction: column;
     justify-content: space-between;
 }
+input.ng-invalid.ng-touched{
+    border:1px solid red;
+}
+input.ng-valid.ng-touched{
+    border:1px solid #98E37E;
+    -webkit-appearance: none;
+
+    background-image: url("/assets/Images/success.svg");
+    background-repeat: no-repeat;
+    background-position-x: 98%;
+    background-position-y: 20px;
+
+}
