--- a/src/app/user/personal-info/personal-info.component.html
+++ b/src/app/user/personal-info/personal-info.component.html
@@ -63,7 +63,7 @@
             </div>
             <div class="form-group">
                 <button 
-                [disabled]="!form.valid"
+                
                 class="btn">ᲨᲔᲛᲓᲔᲒᲘ</button>
             </div>
         </div>
@@ -72,3 +72,4 @@
 
 <!-- (change)="onUploadImageInputChange($event)" Input-->
 <!-- (click)="onImageUpload(uploadInp)" Button-->
+<!-- [disabled]="!form.valid" -->
