--- a/src/app/user/user-info-area/user-info-area.component.html
+++ b/src/app/user/user-info-area/user-info-area.component.html
@@ -1,9 +1,9 @@
 <article class="user-info__area">
-    <!-- <div class="user-information">
+    <div class="user-information">
         <div class="user-info__top">
             <div class="user-info__left">
                 <div class="inline-form-groups">
-                    <h2 class="name">{{user.name}}</h2>
+                    <h2 class="name">{{user.userInfo}}</h2>
                     <h2 class="surname">{{user.surname}}</h2>
                 </div>
                 <div class="email d-flex">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <p></p>
-    </div> -->
+    </div>
     
     <div class="user-info-image">
         <figure>
