--- a/src/app/user/user-info-area/user-info-area.component.html
+++ b/src/app/user/user-info-area/user-info-area.component.html
@@ -3,7 +3,7 @@
         <div class="user-info__top">
             <div class="user-info__left">
                 <div class="inline-form-groups">
-                    <h2 class="name">{{user.userInfo}}</h2>
+                    <h2 class="name">{{user.name}}</h2>
                     <h2 class="surname">{{user.surname}}</h2>
                 </div>
                 <div class="email d-flex">
