--- a/src/app/user/user-info-area/user-info-area.component.html
+++ b/src/app/user/user-info-area/user-info-area.component.html
@@ -1,4 +1,5 @@
-<article class="user-info__area">
+<article
+class="user-info__area" >
     <div class="user-information">
         <div class="user-info__top">
             <div class="user-info__left">
@@ -29,8 +30,14 @@
                 </figure>
             </div>
         </div>
-        <p></p>
     </div>
+    <div class="user-experiece__Information">
+        <div class="form-group">
+            <h1>something</h1>
+            <h1>{{experience.description}}</h1>
+        </div>
+    </div>
+
     
     <div class="user-info-image">
         <figure>
